Add Fake compact NoIP Endpoint
